--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/rtaph/foofactors
 BugReports: https://github.com/rtaph/foofactors/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
