--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ BugReports: https://github.com/rtaph/foofactors/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    forcats
